data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_700.wast
;; 1. **Test Description 1:** A `br_if` instruction with a simple condition checking if the top stack value is zero. If the condition evaluation always results in taking the branch (whether the value is zero or not), it will lead to incorrect branching and code execution paths.    - **Constraint Checked:** Correct evaluation of a zero check condition.    - **Differential Behavior:** Wizard Engine may always branch regardless of the stack value.

(assert_invalid
 (module
  (func $br_if_condition (result i32)
   (block (result i32)
    (i32.const 42)
    (br_if 0 (i32.const 0))
    (i32.const 13)
   )
  )
 )
 "type mismatch"
)